<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTopAndBottomBK"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/app_version"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dividerHeight="1dp"
            android:text="@string/string_scan_devices"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dividerHeight="1dp"
            android:text="@string/string_connect_devices"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/scanList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@color/colorCuttingLineTransparentBK"
            android:dividerHeight="1dp" />

        <ListView
            android:id="@+id/connectedList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:divider="@color/colorCuttingLineTransparentBK"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:padding="3dp">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_restartapp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/string_restart_app" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:padding="3dp"
            android:text="@string/string_restart_bluetooth">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_restartbluetooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/string_restart_bluetooth" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:baselineAligned="false"
        android:padding="12dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_sendCommand1"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:background="@color/red" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_sendCommand2"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:background="@color/green" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_sendCommand3"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:background="@color/blue" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <wl.smartled.test.view.AlphaImageButton
                android:id="@+id/aib_sendCommand4"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:background="@color/white" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>